--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,34 @@
-name: Release
+name: goreleaser
 
 on:
+  pull_request:
   push:
-    tags:
-      - 'v*'
+
+permissions:
+  contents: write
 
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      -
+        name: Checkout
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      -
+        name: Set up Go
+        uses: actions/setup-go@v5
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
         with:
-          go-version: '1.24.5'
-      
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
-          version: latest
+          # 'latest', 'nightly', or a semver
+          version: '~> v2'
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
+          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
