--- a/.goreleaser.darwin.yml
+++ b/.goreleaser.darwin.yml
@@ -26,6 +26,7 @@ homebrew_casks:
       name: homebrew-tap
     homepage: "https://github.com/joelgrimberg/projector"
     description: "A CLI application for project and action management"
+    skip_upload: true
 
 release:
   mode: replace
