remove the needs between jobs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,12 @@ jobs:
             @semantic-release/changelog
         env:
           GH_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+      - name: Debug Output
+        run: |
+          echo "Semantic release outputs:"
+          echo "new_release_version: ${{ steps.semantic.outputs.new_release_version }}"
+          echo "new_release_published: ${{ steps.semantic.outputs.new_release_published }}"
+          echo "releases_created: ${{ steps.semantic.outputs.releases_created }}"
       - name: Run GoReleaser (Linux)
         if: steps.semantic.outputs.new_release_version != ''
         env:
@@ -44,8 +50,6 @@ jobs:
 
   darwin:
     runs-on: macos-latest
-    needs: linux
-    if: needs.linux.outputs.new_release_version != ''
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -55,7 +59,24 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: stable
+      - name: Semantic Release
+        id: semantic
+        uses: cycjimmy/semantic-release-action@v4
+        with:
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
+            @semantic-release/changelog
+        env:
+          GH_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+      - name: Debug Output
+        run: |
+          echo "Semantic release outputs:"
+          echo "new_release_version: ${{ steps.semantic.outputs.new_release_version }}"
+          echo "new_release_published: ${{ steps.semantic.outputs.new_release_published }}"
+          echo "releases_created: ${{ steps.semantic.outputs.releases_created }}"
       - name: Build macOS binaries
+        if: steps.semantic.outputs.new_release_version != ''
         run: |
           # Build darwin binaries
           GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go build -ldflags="-s -w" -o dist/projector_darwin_amd64/projector .
@@ -72,11 +93,12 @@ jobs:
           shasum -a 256 *.tar.gz > checksums_darwin.txt
           cd ..
       - name: Generate Homebrew cask
+        if: steps.semantic.outputs.new_release_version != ''
         run: |
           mkdir -p dist/homebrew/Casks
           cat > dist/homebrew/Casks/projector.rb << 'EOF'
           cask "projector" do
-            version "${{ needs.linux.outputs.new_release_version }}"
+            version "${{ steps.semantic.outputs.new_release_version }}"
             sha256 "$(shasum -a 256 dist/projector_darwin_amd64.tar.gz | cut -d' ' -f1)"
             
             url "https://github.com/joelgrimberg/projector/releases/download/v#{version}/projector_darwin_amd64.tar.gz"
@@ -88,6 +110,7 @@ jobs:
           end
           EOF
       - name: Push Homebrew cask to tap
+        if: steps.semantic.outputs.new_release_version != ''
         env:
           TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
         run: |
@@ -105,6 +128,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "No cask changes to commit."
           else
-            git commit -m "Update projector cask for ${{ needs.linux.outputs.new_release_version }}"
+            git commit -m "Update projector cask for ${{ steps.semantic.outputs.new_release_version }}"
             git push https://x-access-token:${TAP_TOKEN}@github.com/joelgrimberg/homebrew-tap.git HEAD:main
           fi
