--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,14 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Install cross compilers
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
       - name: Semantic Release
         id: semantic
         uses: cycjimmy/semantic-release-action@v4
@@ -43,6 +51,12 @@ jobs:
           echo "new_release_version: ${{ steps.semantic.outputs.new_release_version }}"
           echo "new_release_published: ${{ steps.semantic.outputs.new_release_published }}"
           echo "releases_created: ${{ steps.semantic.outputs.releases_created }}"
+      - name: Run GoReleaser (Linux)
+        if: steps.semantic.outputs.new_release_version != ''
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          curl -sL https://git.io/goreleaser | bash
 
   linux:
     runs-on: ubuntu-latest
@@ -61,11 +75,22 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-      - name: Run GoReleaser (Linux)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Linux binaries
         run: |
-          curl -sL https://git.io/goreleaser | bash
+          # Build linux binaries
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-linux-gnu-gcc go build -ldflags="-s -w" -o dist/projector_linux_amd64/projector .
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=1 CC=aarch64-linux-gnu-gcc go build -ldflags="-s -w" -o dist/projector_linux_arm64/projector .
+          
+          # Create archives
+          cd dist
+          tar -czf projector_linux_amd64.tar.gz projector_linux_amd64/
+          tar -czf projector_linux_arm64.tar.gz projector_linux_arm64/
+          cd ..
+          
+          # Create checksums
+          cd dist
+          shasum -a 256 *.tar.gz > checksums_linux.txt
+          cd ..
 
   darwin:
     runs-on: macos-latest
