--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,8 +125,8 @@ jobs:
         if: steps.semantic.outputs.new_release_version != ''
         run: |
           mkdir -p dist/homebrew/Formula
-          cat > dist/homebrew/Formula/projector.rb << 'EOF'
-          class Projector < Formula
+          cat > dist/homebrew/Formula/projector-cli.rb << 'EOF'
+          class ProjectorCli < Formula
             desc "A CLI application for project and action management"
             homepage "https://github.com/joelgrimberg/projector"
             version "${{ steps.semantic.outputs.new_release_version }}"
@@ -147,8 +147,8 @@ jobs:
                 url "https://github.com/joelgrimberg/projector/releases/download/v#{version}/projector_linux_arm64.tar.gz"
                 sha256 "$(shasum -a 256 dist/projector_linux_arm64.tar.gz | cut -d' ' -f1)"
               else
-                url "https://github.com/joelgrimberg/projector/releases/download/v#{version}/projector_linux_amd64.tar.gz"
-                sha256 "$(shasum -a 256 dist/projector_linux_amd64.tar.gz | cut -d' ' -f1)"
+                url "https://github.com/joelgrimberg/projector/releases/download/v#{version}/projector_linux_arm64.tar.gz"
+                sha256 "$(shasum -a 256 dist/projector_linux_arm64.tar.gz | cut -d' ' -f1)"
               end
             end
             
@@ -173,13 +173,13 @@ jobs:
           git clone https://x-access-token:${TAP_TOKEN}@github.com/joelgrimberg/homebrew-tap.git tap
           
           mkdir -p tap/Formula
-          cp dist/homebrew/Formula/projector.rb tap/Formula/projector.rb
+          cp dist/homebrew/Formula/projector-cli.rb tap/Formula/projector-cli.rb
           
           cd tap
-          git add Formula/projector.rb
+          git add Formula/projector-cli.rb
           if git diff --cached --quiet; then
             echo "No formula changes to commit."
           else
-            git commit -m "Update projector formula for ${{ steps.semantic.outputs.new_release_version }}"
+            git commit -m "Update projector-cli formula for ${{ steps.semantic.outputs.new_release_version }}"
             git push https://x-access-token:${TAP_TOKEN}@github.com/joelgrimberg/homebrew-tap.git HEAD:main
           fi
