--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,9 +40,12 @@ jobs:
       - name: Debug Output
         run: |
           echo "Semantic release outputs:"
-          echo "new_release_version: ${{ steps.semantic.outputs.new_release_version }}"
-          echo "new_release_published: ${{ steps.semantic.outputs.new_release_published }}"
-          echo "releases_created: ${{ steps.semantic.outputs.releases_created }}"
+          echo "new_release_version: '${{ steps.semantic.outputs.new_release_version }}'"
+          echo "new_release_published: '${{ steps.semantic.outputs.new_release_published }}'"
+          echo "releases_created: '${{ steps.semantic.outputs.releases_created }}'"
+          echo "Length of new_release_version: ${#steps.semantic.outputs.new_release_version}"
+          echo "Is new_release_version empty? ${{ steps.semantic.outputs.new_release_version == '' }}"
+          echo "Is new_release_version not empty? ${{ steps.semantic.outputs.new_release_version != '' }}"
 
   linux:
     runs-on: ubuntu-latest
@@ -83,37 +86,19 @@ jobs:
           echo "new_release_published: ${{ needs.semantic-release.outputs.new_release_published }}"
           echo "releases_created: ${{ needs.semantic-release.outputs.releases_created }}"
       - name: Upload Linux binaries to release
-        if: needs.semantic-release.outputs.releases_created != ''
+        if: needs.semantic-release.outputs.new_release_version != ''
         run: |
-          # Get the release upload URL from GitHub API
-          RELEASE_ID=$(gh api repos/joelgrimberg/projector/releases/latest --jq '.id')
-          UPLOAD_URL="https://uploads.github.com/repos/joelgrimberg/projector/releases/$RELEASE_ID/assets"
-          
-          # Upload AMD64 binary
-          gh api $UPLOAD_URL \
-            -F name="projector_linux_amd64.tar.gz" \
-            -F label="Linux AMD64 Binary" \
-            -F file=@./dist/projector_linux_amd64.tar.gz
-          
-          # Upload ARM64 binary
-          gh api $UPLOAD_URL \
-            -F name="projector_linux_arm64.tar.gz" \
-            -F label="Linux ARM64 Binary" \
-            -F file=@./dist/projector_linux_arm64.tar.gz
+          TAG="v${{ needs.semantic-release.outputs.new_release_version }}"
+          ls -lah dist
+          gh release upload "$TAG" ./dist/projector_linux_amd64.tar.gz --clobber
+          gh release upload "$TAG" ./dist/projector_linux_arm64.tar.gz --clobber
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Linux ARM64 binary to release
-        if: needs.semantic-release.outputs.releases_created != ''
+        if: needs.semantic-release.outputs.new_release_version != ''
         run: |
-          # Get the release upload URL from GitHub API
-          RELEASE_ID=$(gh api repos/joelgrimberg/projector/releases/latest --jq '.id')
-          UPLOAD_URL="https://uploads.github.com/repos/joelgrimberg/projector/releases/$RELEASE_ID/assets"
-          
-          # Upload ARM64 binary
-          gh api $UPLOAD_URL \
-            -F name="projector_linux_arm64.tar.gz" \
-            -F label="Linux ARM64 Binary" \
-            -F file=@./dist/projector_linux_arm64.tar.gz
+          TAG="v${{ needs.semantic-release.outputs.new_release_version }}"
+          gh release upload "$TAG" ./dist/projector_linux_arm64.tar.gz --clobber
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -152,31 +137,18 @@ jobs:
           echo "new_release_published: ${{ needs.semantic-release.outputs.new_release_published }}"
           echo "releases_created: ${{ needs.semantic-release.outputs.releases_created }}"
       - name: Upload macOS AMD64 binary to release
-        if: needs.semantic-release.outputs.releases_created != ''
+        if: needs.semantic-release.outputs.new_release_version != ''
         run: |
-          # Get the release upload URL from GitHub API
-          RELEASE_ID=$(gh api repos/joelgrimberg/projector/releases/latest --jq '.id')
-          UPLOAD_URL="https://uploads.github.com/repos/joelgrimberg/projector/releases/$RELEASE_ID/assets"
-          
-          # Upload AMD64 binary
-          gh api $UPLOAD_URL \
-            -F name="projector_darwin_amd64.tar.gz" \
-            -F label="macOS AMD64 Binary" \
-            -F file=@./dist/projector_darwin_amd64.tar.gz
+          TAG="v${{ needs.semantic-release.outputs.new_release_version }}"
+          ls -lah dist
+          gh release upload "$TAG" ./dist/projector_darwin_amd64.tar.gz --clobber
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload macOS ARM64 binary to release
-        if: needs.semantic-release.outputs.releases_created != ''
+        if: needs.semantic-release.outputs.new_release_version != ''
         run: |
-          # Get the release upload URL from GitHub API
-          RELEASE_ID=$(gh api repos/joelgrimberg/projector/releases/latest --jq '.id')
-          UPLOAD_URL="https://uploads.github.com/repos/joelgrimberg/projector/releases/$RELEASE_ID/assets"
-          
-          # Upload ARM64 binary
-          gh api $UPLOAD_URL \
-            -F name="projector_darwin_arm64.tar.gz" \
-            -F label="macOS ARM64 Binary" \
-            -F file=@./dist/projector_darwin_arm64.tar.gz
+          TAG="v${{ needs.semantic-release.outputs.new_release_version }}"
+          gh release upload "$TAG" ./dist/projector_darwin_arm64.tar.gz --clobber
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate Homebrew formula
