--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,31 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
       - name: Semantic Release
         id: semantic
-        uses: semantic-release/github-action@v6
-        with:
-          semantic_version: 24
-          branches: |
-            main
+        run: |
+          # Get the latest tag or start from v0.1.0
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.1.0")
+          echo "Latest tag: $LATEST_TAG"
+          
+          # Extract version number and increment patch
+          VERSION=$(echo "$LATEST_TAG" | sed 's/v//')
+          MAJOR=$(echo "$VERSION" | cut -d. -f1)
+          MINOR=$(echo "$VERSION" | cut -d. -f2)
+          PATCH=$(echo "$VERSION" | cut -d. -f3)
+          NEW_PATCH=$((PATCH + 1))
+          NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+          NEW_TAG="v${NEW_VERSION}"
+          
+          echo "New version: $NEW_VERSION"
+          echo "New tag: $NEW_TAG"
+          
+          # Create and push the new tag
+          git tag "$NEW_TAG"
+          git push origin "$NEW_TAG"
+          
+          # Set outputs for other jobs
+          echo "new_release_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "new_release_published=true" >> $GITHUB_OUTPUT
+          echo "releases_created=" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Debug Output
